Switched feature usage trace events to use the stable feature ID's

The trace events for CSS feature usage were using the unstable property
ID which doesn't match what is reported in UMA.  This change switches
the trace events to use the same stable feature ID that is reported to
UMA.

BUG=671731

Review-Url: https://codereview.chromium.org/2558583002
Cr-Commit-Position: refs/heads/master@{#436762}

Former-commit-id: 9f983fdfad8789c3c70e818d2cb452cd497ac407